fix dialog z-index issue

--- a/src/styles.less
+++ b/src/styles.less
@@ -7,3 +7,6 @@
 .pagination>li>a, .pagination>li>span {
     height: 100%;
 }
+.cdk-overlay-container{
+    z-index: 1050;
+}
